# trigger

./: .gitignore  CMakeLists.txt  README.md  main.c  run_tests.sh
include/: builtins.h  execute.h  input.h
src/: builtins.c  execute.c  input.c  main.c
src/utils/: utils.c  utils.h
tests/: test_builtins.c  test_execute.c  test_framework.h  test_input.c
